--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -5,7 +5,7 @@ Browse by Category
 <ul>
   <% @categories.each do |category| %>
     <li>
-    <%= link_to category.name, category_path(category.internal_name) %>
+    <%= link_to(category.name, category_path(category.internal_name)) %>
     </li>
   <% end %>
 </ul>
