--- a/app/views/indicators/show.html.erb
+++ b/app/views/indicators/show.html.erb
@@ -3,11 +3,11 @@
 </h1>
 
 <h4>
-  <%= link_to "Categories", categories_path %>
+  <%= link_to("Categories", categories_path)%>
    >
-  <%= link_to @category.name, category_path(@category.internal_name) %>
+  <%= link_to(@category.name, category_path(@category.internal_name))%>
    >
-  <%= link_to @dataset.name, dataset_path(@dataset.internal_name) %>
+  <%= link_to(@dataset.name, dataset_path(@dataset.internal_name))%>
 </h4>
 
 <%= line_chart @data %>
