Add search for indicators

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -2,6 +2,11 @@
 Browse by Category
 </h1>
 
+<%= simple_form_for :search,  url: indicators_path , :method => :get do |f| %>
+    <%= f.input :query, placeholder: 'Search for indicators' %>
+    <%= f.submit "Search" %>
+<% end %>
+
 <ul>
   <% @categories.each do |category| %>
     <li>
