Add gretel gem for breadcrumbs

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,12 +1,8 @@
+<% breadcrumb :category, @category %>
+
 <h1>
   <%= @category.name %> datasets
 </h1>
-
-<h4>
-  <%= link_to("Categories", categories_path)%>
-   >
-  <%= @category.name %>
-</h4>
 
 <ul>
   <% @datasets.each do |dataset| %>
