--- a/app/views/datasets/show.html.erb
+++ b/app/views/datasets/show.html.erb
@@ -1,14 +1,8 @@
+<% breadcrumb :dataset, @dataset %>
+
 <h1>
   <%= @dataset.name %> indicators
 </h1>
-
-<h4>
-  <%= link_to("Categories", categories_path)%>
-   >
-  <%= link_to(@category.name, category_path(@category.internal_name))%>
-   >
-  <%= @dataset.name %>
-</h4>
 
 <ul>
   <% @indicators.each do |indicator| %>
