--- a/app/views/indicators/index.html.erb
+++ b/app/views/indicators/index.html.erb
@@ -1,10 +1,13 @@
+<% breadcrumb :indicators %>
+
 <h1>
   Search for indicators
 </h1>
 
-<h4>
-  <%= link_to("Categories", categories_path)%>
-</h4>
+<%= simple_form_for :search, :method => :get do |f| %>
+  <%= f.input :query, label: false, placeholder: 'Search for indicators' %>
+  <%= f.submit "Search" %>
+<% end %>
 
 <h3>
   <%= @indicators ? "Results:" : nil %>
