--- a/app/views/indicators/show.html.erb
+++ b/app/views/indicators/show.html.erb
@@ -1,3 +1,5 @@
+<% breadcrumb :indicator, @indicator %>
+
 <h1>
   <%= @indicator.name %>
 </h1>
@@ -7,18 +9,6 @@
   <%= f.input :indicator_id, as: :hidden %>
   <%= f.button :submit %>
 <% end %>
-
-<h4>
-  <%= link_to("Categories", categories_path)%>
-   >
-  <%= link_to(@category.name, category_path(@category.internal_name))%>
-   >
-  <%= link_to(@dataset.name, dataset_path(@dataset.internal_name))%>
-</h4>
-
-<h4>
-  <%= link_to("Your Dashboards", dashboards_path) %>
-</h4>
 
 <%= simple_form_for :filter,  url: indicator_path , :method => :get do |f| %>
   <%= f.select :geo_code_id, @geo_codes.map { |gc| [gc.name, gc.id] }, selected: @filters[:geo_code_id], include_blank: true %>
