--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,8 @@
 
   <body>
     <%= render 'layouts/header' %>
-
+    <%= breadcrumbs pretext: "You are here: ",
+                separator: " &rsaquo; " %>
     <% flash.each do |name, msg| %>
       <%= content_tag :div, msg, class: name %>
     <% end %>
