--- a/app/views/series/show.html.erb
+++ b/app/views/series/show.html.erb
@@ -2,20 +2,32 @@
 
 <h1>
   <%= @series.display_name %>
-  <span class="add-dashboard-item dropdown">
-    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Add to Dashboard<span class="caret"></span></a>
-    <ul class="dropdown-menu">
-      <%= simple_form_for @dashboard_item do |f| %>
-        <%= f.association :dashboard %>
-        <%= f.input :indicator_id, as: :hidden %>
-        <%= f.input :series_id, as: :hidden %>
-        <%= f.button :submit %>
-      <% end %>
-    </ul>
-  </span>
+  <% if current_user %>
+    <span class="add-dashboard-item dropdown">
+      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Add to Dashboard<span class="caret"></span></a>
+      <ul class="dropdown-menu">
+        <%= simple_form_for @dashboard_item do |f| %>
+          <%= f.association :dashboard %>
+          <%= f.input :indicator_id, as: :hidden %>
+          <%= f.input :series_id, as: :hidden %>
+          <%= f.button :submit %>
+        <% end %>
+      </ul>
+    </span>
+  <% else %>
+    <%= link_to "Sign up to add this to your dashboard", new_user_registration_path, :class => 'add-dashboard-item'  %>
+  <% end %>
 </h1>
 
-<%= line_chart @series.display_data, library: {title: {text: @series.indicator.name} } %>
+<%= line_chart @series.display_data(current_user), library: {title: {text: @series.indicator.name} } %>
+
+<% unless current_user %>
+  <h4>
+    <span class="label label-default">
+    Trial users are limited to data before 2000. </span>
+  </h4>
+  <%= link_to "Get Started", new_user_registration_path, class: 'btn btn-primary' %>
+<% end %>
 
 <h4>
   Other Series in <%= @series.geo_code.name %>
@@ -24,7 +36,7 @@
 <ul>
   <% @series_related_by_geo.each do |series| %>
     <li class="related">
-      <%= line_chart series.display_data, width: "300px", library: {title: {text: series.indicator.name} } %>
+      <%= line_chart series.display_data(current_user), width: "300px", library: {title: {text: series.indicator.name} } %>
     </li>
   <% end %>
 </ul>
