Tweaks for public viewing of series

--- a/app/views/series/show.html.erb
+++ b/app/views/series/show.html.erb
@@ -26,7 +26,7 @@
     <span class="label label-default">
     Trial users are limited to data before 2000. </span>
   </h4>
-  <%= link_to "Get Started", new_user_registration_path, class: 'btn btn-primary' %>
+  <%= link_to "Get Access", new_user_registration_path, class: 'btn btn-primary' %>
 <% end %>
 
 <h4>
