--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,11 @@
 
   <body>
     <%= render 'layouts/header' %>
+    <div class="container">
     <%= breadcrumbs semantic: true, separator: " &rsaquo; " %>
     <%= flash_messages %>
-    <%= yield %>
+      <%= yield %>
+    </div>
+    <%= render 'layouts/footer' %>
   </body>
 </html>
