--- a/app/views/series/show.html.erb
+++ b/app/views/series/show.html.erb
@@ -19,7 +19,7 @@
   <% end %>
 </h1>
 
-<%= line_chart @data, library: {title: {text: @series.indicator.name} } %>
+<%= line_chart @data, library: { title: {text: @series.indicator.name}, yAxis: {title: {text: @series.unit.name}} } %>
 
 <% unless current_user %>
   <h4>
@@ -29,14 +29,16 @@
   <%= link_to "Get Access", new_user_registration_path, class: 'btn btn-primary' %>
 <% end %>
 
-<h4>
-  Other Series in <%= @series.geo_code.name %>
-</h4>
 
-<ul>
-  <% @series_related_by_geo.each do |series| %>
-    <li class="related">
-      <%= line_chart [series.display_data(current_user)], width: "300px", library: {title: {text: series.indicator.name} } %>
-    </li>
-  <% end %>
-</ul>
+<div class="panel panel-primary">
+  <div class="panel-heading">
+    Other Series in <%= @series.geo_code.name %>
+  </div>
+  <div class="panel-content text-center">
+    <% @series_related_by_geo.each do |series| %>
+      <li class="related">
+        <%= line_chart [series.display_data(current_user)], width: "280px", library: { title: {text: series.indicator.name}, yAxis: {title: {text: @series.unit.name}} } %>
+      </li>
+    <% end %>
+  </div>
+</div>
